<resources>
    <string name="app_name">MovieCollection</string>
    <string name="small_poster_description">Movie poster</string>
    <string name="sort_by_popularity">By popularity</string>
    <string name="sort_by_rating">By rating</string>
    <string name="main_menu">Main</string>
    <string name="movie_poster">Movie poster</string>
    <string name="movie_rating">TMDb:</string>
    <string name="release_date">Release date:</string>
    <string name="movie_description">Overview</string>
    <string name="movie_title">Title:</string>
    <string name="original_movie_title">Original title:</string>
    <string name="add_to_favourites">Add to Favorites</string>
    <string name="play_trailer_of_movie">Play trailer</string>
    <string name="added_to_favourites">Added to Favorites</string>
    <string name="deleted_from_favourites">Removed from Favorites</string>
    <string name="video_title">Videos</string>
    <string name="reviews_title">Reviews</string>
    <string name="read_more">Read more...</string>
    <string name="read_less">Read less</string>
    <string name="hint_search">Search...</string>
    <string name="search_item_title">Search</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_favorites">Favorites</string>
    <string name="Tranding">Trending</string>
    <string name="movies">MOVIES</string>
    <string name="tv_shows">TV SHOWS</string>
    <string name="first_air_date">First air date:</string>
    <string name="top_rated">Top Rated</string>
    <string name="for_kids">For kids</string>
    <string name="no_reviews">there\'re no reviews yet:(</string>
    <string name="no_video">there\'re no trailers :(</string>
    <string name="genres">Genres</string>
    <string name="title_of_searchmain">DISCOVER</string>
    <string name="hint_search_title">Movies, TV shows</string>
    <string name="watchlist">WATCHLIST</string>
    <string name="title_tab_item_movies">Movies</string>
    <string name="title_tab_item_tvshows">TV shows</string>
    <string name="action_title">Action</string>
    <string name="fantasy_title">Fantasy</string>
    <string name="scifi_title">Science fiction</string>
    <string name="comedy_title">Comedy</string>
    <string name="horror_title">Horror</string>
    <string name="war_title">War</string>
    <string name="romance_title">Romance</string>
    <string name="history_title">History</string>
    <string name="crime_title">Crime</string>
    <string name="adventure_title">Adventure</string>
    <string name="image_of_loupe">imageOfLoupe</string>

</resources>
